--- a/muninja/imm_summary.html
+++ b/muninja/imm_summary.html
@@ -7,7 +7,7 @@
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>muninja.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
-<TD ALIGN=LEFT><font color='red'; face='Arial'><b>X </b></font><A HREF_DISABLED='/home/bluelabuser/muninja/muninja/_xmsgs/pn_parser.xmsgs?&DataKey=Error'>5 Errors</A></TD>
+<TD ALIGN=LEFT><font color='red'; face='Arial'><b>X </b></font><A HREF_DISABLED='C:/Users/rbcsj/Desktop/Yoda/YODA_Image_Masking_Accelerator/muninja\_xmsgs/pn_parser.xmsgs?&DataKey=Error'>5 Errors</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -75,5 +75,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 06/20/2017 - 22:20:22</center>
+<br><center><b>Date Generated:</b> 06/20/2017 - 22:32:51</center>
 </BODY></HTML>
